added login, fixed navpoints

--- a/widgets/employeeSystem_pages/employeeSystem_p_editAddress/scratch_adm/undo.xml.6
+++ b/widgets/employeeSystem_pages/employeeSystem_p_editAddress/scratch_adm/undo.xml.6
@@ -4,9 +4,9 @@
   <linkedWidget>toolbox.page</linkedWidget>
   <updateTime>0</updateTime>
   <updatedBy>adm</updatedBy>
-  <pageMode></pageMode>
-  <pageType>regular</pageType>
-  <framework>jquery</framework>
+  <pageMode>page</pageMode>
+  <pageType>default</pageType>
+  <framework>none</framework>
   <styleClass></styleClass>
   <theme></theme>
   <cell>
@@ -14,7 +14,7 @@
       <widgetClass>tooltwist.wbd.GridWidget</widgetClass>
       <idWithinRootWidget>1</idWithinRootWidget>
       <linkedWidget>toolbox.grid</linkedWidget>
-      <cols>2</cols>
+      <cols>3</cols>
       <rows>1</rows>
       <width></width>
       <height></height>
@@ -23,12 +23,24 @@
       <cellDivs>none</cellDivs>
       <cell>
         <index>0,0</index>
+        <width>50</width>
+        <height></height>
+        <align></align>
+        <valign></valign>
+        <wrap>wrap</wrap>
         <styleClass></styleClass>
+        <left></left>
+        <top></top>
+        <_initialized>true</_initialized>
+      </cell>
+      <cell>
+        <index>1,0</index>
         <width></width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
@@ -45,57 +57,54 @@
           <cellDivs>none</cellDivs>
           <cell>
             <index>0,0</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>5</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,1</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
-            <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>4</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
-            </widget>
           </cell>
           <cell>
             <index>0,2</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
           </cell>
           <cell>
             <index>0,3</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -108,12 +117,12 @@
           </cell>
           <cell>
             <index>0,4</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -121,13 +130,13 @@
         </widget>
       </cell>
       <cell>
-        <index>1,0</index>
-        <styleClass></styleClass>
+        <index>2,0</index>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
