--- a/widgets/employeeSystem_pages/employeeSystem_p_editContact/scratch_adm/undo.xml.9
+++ b/widgets/employeeSystem_pages/employeeSystem_p_editContact/scratch_adm/undo.xml.9
@@ -4,9 +4,9 @@
   <linkedWidget>toolbox.page</linkedWidget>
   <updateTime>0</updateTime>
   <updatedBy>adm</updatedBy>
-  <pageMode></pageMode>
-  <pageType>regular</pageType>
-  <framework>jquery</framework>
+  <pageMode>page</pageMode>
+  <pageType>default</pageType>
+  <framework>none</framework>
   <styleClass></styleClass>
   <theme></theme>
   <cell>
@@ -23,24 +23,24 @@
       <cellDivs>none</cellDivs>
       <cell>
         <index>0,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
       </cell>
       <cell>
         <index>1,0</index>
-        <styleClass></styleClass>
         <width></width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
@@ -57,57 +57,54 @@
           <cellDivs>none</cellDivs>
           <cell>
             <index>0,0</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>5</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,1</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
-            <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>4</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>3c7fc5</color>
-              <weight>bold</weight>
-            </widget>
           </cell>
           <cell>
             <index>0,2</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
           </cell>
           <cell>
             <index>0,3</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -120,12 +117,12 @@
           </cell>
           <cell>
             <index>0,4</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -134,12 +131,12 @@
       </cell>
       <cell>
         <index>2,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
