--- a/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.9
+++ b/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.9
@@ -6,7 +6,7 @@
   <updatedBy>adm</updatedBy>
   <pageMode>page</pageMode>
   <pageType>default</pageType>
-  <framework>none</framework>
+  <framework>jquery</framework>
   <styleClass></styleClass>
   <theme></theme>
   <cell>
@@ -14,7 +14,7 @@
       <widgetClass>tooltwist.wbd.GridWidget</widgetClass>
       <idWithinRootWidget>1</idWithinRootWidget>
       <linkedWidget>toolbox.grid</linkedWidget>
-      <cols>2</cols>
+      <cols>3</cols>
       <rows>1</rows>
       <width></width>
       <height></height>
@@ -23,6 +23,18 @@
       <cellDivs>none</cellDivs>
       <cell>
         <index>0,0</index>
+        <width>50</width>
+        <height></height>
+        <align></align>
+        <valign></valign>
+        <wrap>wrap</wrap>
+        <styleClass></styleClass>
+        <left></left>
+        <top></top>
+        <_initialized>true</_initialized>
+      </cell>
+      <cell>
+        <index>1,0</index>
         <width></width>
         <height></height>
         <align></align>
@@ -45,24 +57,30 @@
           <cellDivs>none</cellDivs>
           <cell>
             <index>0,0</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>5</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,1</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -78,24 +96,24 @@
           </cell>
           <cell>
             <index>0,2</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
           </cell>
           <cell>
             <index>0,3</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -104,17 +122,17 @@
               <idWithinRootWidget>4</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.employeeList</linkedWidget>
               <elementId></elementId>
-              <target></target>
+              <target>employeeSystem-2</target>
             </widget>
           </cell>
           <cell>
             <index>0,4</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -122,13 +140,13 @@
         </widget>
       </cell>
       <cell>
-        <index>1,0</index>
-        <styleClass></styleClass>
-        <width></width>
+        <index>2,0</index>
+        <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
