--- a/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.8
+++ b/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.8
@@ -5,7 +5,7 @@
   <updateTime>0</updateTime>
   <updatedBy>adm</updatedBy>
   <pageMode>page</pageMode>
-  <pageType></pageType>
+  <pageType>default</pageType>
   <framework>none</framework>
   <styleClass></styleClass>
   <theme></theme>
@@ -66,6 +66,12 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>7</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,1</index>
@@ -116,6 +122,8 @@
               <idWithinRootWidget>4</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.employeeDetails</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-4</target>
+              <homePage>employeeSystem-home</homePage>
             </widget>
           </cell>
           <cell>
@@ -146,6 +154,7 @@
               <idWithinRootWidget>5</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.addressList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-5</target>
             </widget>
           </cell>
           <cell>
@@ -176,6 +185,7 @@
               <idWithinRootWidget>6</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.contactList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-6</target>
             </widget>
           </cell>
           <cell>
