--- a/widgets/employeeSystem_pages/employeeSystem_p_editEmployee/scratch_adm/undo.xml.1
+++ b/widgets/employeeSystem_pages/employeeSystem_p_editEmployee/scratch_adm/undo.xml.1
@@ -23,12 +23,12 @@
       <cellDivs>none</cellDivs>
       <cell>
         <index>0,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
@@ -49,7 +49,7 @@
           <idWithinRootWidget>2</idWithinRootWidget>
           <linkedWidget>toolbox.grid</linkedWidget>
           <cols>1</cols>
-          <rows>5</rows>
+          <rows>6</rows>
           <width></width>
           <height></height>
           <align>center</align>
@@ -57,57 +57,59 @@
           <cellDivs>none</cellDivs>
           <cell>
             <index>0,0</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
-            <left></left>
-            <top></top>
-            <_initialized>true</_initialized>
-          </cell>
-          <cell>
-            <index>0,1</index>
             <styleClass></styleClass>
-            <width></width>
-            <height></height>
-            <align></align>
-            <valign></valign>
-            <wrap>wrap</wrap>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
             <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>3</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>5</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
             </widget>
           </cell>
           <cell>
-            <index>0,2</index>
-            <styleClass></styleClass>
-            <width></width>
-            <height>20</height>
-            <align></align>
-            <valign></valign>
-            <wrap>wrap</wrap>
-            <left></left>
-            <top></top>
-            <_initialized>true</_initialized>
-          </cell>
-          <cell>
-            <index>0,3</index>
-            <styleClass></styleClass>
+            <index>0,1</index>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
+            <left></left>
+            <top></top>
+            <_initialized>true</_initialized>
+          </cell>
+          <cell>
+            <index>0,2</index>
+            <width></width>
+            <height>20</height>
+            <align></align>
+            <valign></valign>
+            <wrap>wrap</wrap>
+            <styleClass></styleClass>
+            <left></left>
+            <top></top>
+            <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>6</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_navbar_zone</linkedWidget>
+            </widget>
+          </cell>
+          <cell>
+            <index>0,3</index>
+            <width></width>
+            <height></height>
+            <align></align>
+            <valign></valign>
+            <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -116,30 +118,48 @@
               <idWithinRootWidget>4</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.employeeDetailsForm</linkedWidget>
               <elementId></elementId>
+              <parent>employeeSystem-home</parent>
             </widget>
           </cell>
           <cell>
             <index>0,4</index>
+            <width></width>
+            <height>20</height>
+            <align></align>
+            <valign></valign>
+            <wrap>wrap</wrap>
             <styleClass></styleClass>
+            <left></left>
+            <top></top>
+            <_initialized>true</_initialized>
+          </cell>
+          <cell>
+            <index>0,5</index>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>7</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_footer</linkedWidget>
+            </widget>
           </cell>
         </widget>
       </cell>
       <cell>
         <index>2,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
