--- a/widgets/employeeSystem_pages/employeeSystem_p_editEmployee/scratch_adm/undo.xml.9
+++ b/widgets/employeeSystem_pages/employeeSystem_p_editEmployee/scratch_adm/undo.xml.9
@@ -23,12 +23,12 @@
       <cellDivs>none</cellDivs>
       <cell>
         <index>0,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
@@ -49,7 +49,7 @@
           <idWithinRootWidget>2</idWithinRootWidget>
           <linkedWidget>toolbox.grid</linkedWidget>
           <cols>1</cols>
-          <rows>4</rows>
+          <rows>5</rows>
           <width></width>
           <height></height>
           <align>center</align>
@@ -57,24 +57,30 @@
           <cellDivs>none</cellDivs>
           <cell>
             <index>0,0</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>5</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,1</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -90,24 +96,48 @@
           </cell>
           <cell>
             <index>0,2</index>
-            <styleClass></styleClass>
             <width></width>
-            <height></height>
+            <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.NavBarWidget</widgetClass>
+              <idWithinRootWidget>6</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.navBar</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,3</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
+            <left></left>
+            <top></top>
+            <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.EmployeeDetailsFormWidget</widgetClass>
+              <idWithinRootWidget>4</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.employeeDetailsForm</linkedWidget>
+              <elementId></elementId>
+            </widget>
+          </cell>
+          <cell>
+            <index>0,4</index>
+            <width></width>
+            <height></height>
+            <align></align>
+            <valign></valign>
+            <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -116,12 +146,12 @@
       </cell>
       <cell>
         <index>2,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
