--- a/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.1
+++ b/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.1
@@ -6,7 +6,7 @@
   <updatedBy>adm</updatedBy>
   <pageMode>page</pageMode>
   <pageType>default</pageType>
-  <framework>jquery</framework>
+  <framework>none</framework>
   <styleClass></styleClass>
   <theme></theme>
   <cell>
@@ -49,7 +49,7 @@
           <idWithinRootWidget>2</idWithinRootWidget>
           <linkedWidget>toolbox.grid</linkedWidget>
           <cols>1</cols>
-          <rows>5</rows>
+          <rows>6</rows>
           <width></width>
           <height></height>
           <align>center</align>
@@ -84,15 +84,6 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
-            <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>3</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
-            </widget>
           </cell>
           <cell>
             <index>0,2</index>
@@ -105,6 +96,11 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>6</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_navbar_zone</linkedWidget>
+            </widget>
           </cell>
           <cell>
             <index>0,3</index>
@@ -127,6 +123,18 @@
           </cell>
           <cell>
             <index>0,4</index>
+            <styleClass></styleClass>
+            <width></width>
+            <height></height>
+            <align></align>
+            <valign></valign>
+            <wrap>wrap</wrap>
+            <left></left>
+            <top></top>
+            <_initialized>true</_initialized>
+          </cell>
+          <cell>
+            <index>0,5</index>
             <width></width>
             <height></height>
             <align></align>
@@ -136,6 +144,11 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>7</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_footer</linkedWidget>
+            </widget>
           </cell>
         </widget>
       </cell>
