--- a/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.2
+++ b/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.2
@@ -5,8 +5,8 @@
   <updateTime>0</updateTime>
   <updatedBy>adm</updatedBy>
   <pageMode>page</pageMode>
-  <pageType>regular</pageType>
-  <framework>jquery</framework>
+  <pageType>default</pageType>
+  <framework>none</framework>
   <styleClass></styleClass>
   <theme></theme>
   <cell>
@@ -84,15 +84,6 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
-            <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>3</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
-            </widget>
           </cell>
           <cell>
             <index>0,2</index>
@@ -105,6 +96,11 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>6</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_navbar_zone</linkedWidget>
+            </widget>
           </cell>
           <cell>
             <index>0,3</index>
@@ -136,6 +132,11 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>7</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_footer</linkedWidget>
+            </widget>
           </cell>
         </widget>
       </cell>
