--- a/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.5
+++ b/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.5
@@ -23,12 +23,12 @@
       <cellDivs>none</cellDivs>
       <cell>
         <index>0,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
@@ -57,57 +57,61 @@
           <cellDivs>none</cellDivs>
           <cell>
             <index>0,0</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
-            <left></left>
-            <top></top>
-            <_initialized>true</_initialized>
-          </cell>
-          <cell>
-            <index>0,1</index>
             <styleClass></styleClass>
-            <width></width>
-            <height></height>
-            <align></align>
-            <valign></valign>
-            <wrap>wrap</wrap>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
             <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>3</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>5</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
             </widget>
           </cell>
           <cell>
-            <index>0,2</index>
-            <styleClass></styleClass>
-            <width></width>
-            <height>20</height>
-            <align></align>
-            <valign></valign>
-            <wrap>wrap</wrap>
-            <left></left>
-            <top></top>
-            <_initialized>true</_initialized>
-          </cell>
-          <cell>
-            <index>0,3</index>
-            <styleClass></styleClass>
+            <index>0,1</index>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
+            <left></left>
+            <top></top>
+            <_initialized>true</_initialized>
+          </cell>
+          <cell>
+            <index>0,2</index>
+            <width></width>
+            <height>20</height>
+            <align></align>
+            <valign></valign>
+            <wrap>wrap</wrap>
+            <styleClass></styleClass>
+            <left></left>
+            <top></top>
+            <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.NavBarWidget</widgetClass>
+              <idWithinRootWidget>6</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.navBar</linkedWidget>
+              <elementId></elementId>
+              <target>employeeSystem-home</target>
+            </widget>
+          </cell>
+          <cell>
+            <index>0,3</index>
+            <width></width>
+            <height></height>
+            <align></align>
+            <valign></valign>
+            <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -121,12 +125,12 @@
           </cell>
           <cell>
             <index>0,4</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -135,12 +139,12 @@
       </cell>
       <cell>
         <index>2,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
