--- a/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.7
+++ b/widgets/employeeSystem_pages/employeeSystem_p_home/scratch_adm/undo.xml.7
@@ -23,12 +23,12 @@
       <cellDivs>none</cellDivs>
       <cell>
         <index>0,0</index>
-        <styleClass></styleClass>
-        <width></width>
+        <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
@@ -57,24 +57,30 @@
           <cellDivs>none</cellDivs>
           <cell>
             <index>0,0</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>5</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,1</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -90,24 +96,30 @@
           </cell>
           <cell>
             <index>0,2</index>
-            <styleClass></styleClass>
             <width></width>
             <height>20</height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.NavBarWidget</widgetClass>
+              <idWithinRootWidget>6</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.navBar</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,3</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -116,17 +128,17 @@
               <idWithinRootWidget>4</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.employeeList</linkedWidget>
               <elementId></elementId>
-              <target></target>
+              <target>employeeSystem-2</target>
             </widget>
           </cell>
           <cell>
             <index>0,4</index>
-            <styleClass></styleClass>
             <width></width>
             <height></height>
             <align></align>
             <valign></valign>
             <wrap>wrap</wrap>
+            <styleClass></styleClass>
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
@@ -135,12 +147,12 @@
       </cell>
       <cell>
         <index>2,0</index>
-        <styleClass></styleClass>
         <width>50</width>
         <height></height>
         <align></align>
         <valign></valign>
         <wrap>wrap</wrap>
+        <styleClass></styleClass>
         <left></left>
         <top></top>
         <_initialized>true</_initialized>
