--- a/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.2
+++ b/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.2
@@ -84,15 +84,6 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
-            <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>3</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
-            </widget>
           </cell>
           <cell>
             <index>0,2</index>
@@ -105,6 +96,11 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>8</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_navbar_zone</linkedWidget>
+            </widget>
           </cell>
           <cell>
             <index>0,3</index>
@@ -154,6 +150,7 @@
               <idWithinRootWidget>5</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.addressList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-5</target>
             </widget>
           </cell>
           <cell>
@@ -184,6 +181,7 @@
               <idWithinRootWidget>6</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.contactList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-6</target>
             </widget>
           </cell>
           <cell>
@@ -197,6 +195,11 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.wbd.ReferenceWidget</widgetClass>
+              <idWithinRootWidget>9</idWithinRootWidget>
+              <linkedWidget>employeeSystem.zones.employeeSystem_z_footer</linkedWidget>
+            </widget>
           </cell>
         </widget>
       </cell>
