--- a/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.4
+++ b/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.4
@@ -5,8 +5,8 @@
   <updateTime>0</updateTime>
   <updatedBy>adm</updatedBy>
   <pageMode>page</pageMode>
-  <pageType>regular</pageType>
-  <framework>jquery</framework>
+  <pageType>default</pageType>
+  <framework>none</framework>
   <styleClass></styleClass>
   <theme></theme>
   <cell>
@@ -84,15 +84,6 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
-            <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>3</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
-            </widget>
           </cell>
           <cell>
             <index>0,2</index>
@@ -154,6 +145,7 @@
               <idWithinRootWidget>5</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.addressList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-5</target>
             </widget>
           </cell>
           <cell>
@@ -184,6 +176,7 @@
               <idWithinRootWidget>6</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.contactList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-6</target>
             </widget>
           </cell>
           <cell>
