--- a/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.6
+++ b/widgets/employeeSystem_pages/employeeSystem_z_employeeDetails/scratch_adm/undo.xml.6
@@ -5,8 +5,8 @@
   <updateTime>0</updateTime>
   <updatedBy>adm</updatedBy>
   <pageMode>page</pageMode>
-  <pageType>regular</pageType>
-  <framework>jquery</framework>
+  <pageType>default</pageType>
+  <framework>none</framework>
   <styleClass></styleClass>
   <theme></theme>
   <cell>
@@ -66,6 +66,12 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.BootstrapWidget</widgetClass>
+              <idWithinRootWidget>7</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.bootstrap</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,1</index>
@@ -78,15 +84,6 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
-            <widget>
-              <widgetClass>tooltwist.wbd.widgets.PageTitleWidget</widgetClass>
-              <idWithinRootWidget>3</idWithinRootWidget>
-              <linkedWidget>toolbox.pageTitle</linkedWidget>
-              <title>Employee Information System</title>
-              <size>24</size>
-              <color>9c9c9c</color>
-              <weight>bold</weight>
-            </widget>
           </cell>
           <cell>
             <index>0,2</index>
@@ -99,6 +96,12 @@
             <left></left>
             <top></top>
             <_initialized>true</_initialized>
+            <widget>
+              <widgetClass>tooltwist.employeeSystem.widgets.NavBarWidget</widgetClass>
+              <idWithinRootWidget>8</idWithinRootWidget>
+              <linkedWidget>employeeSystem.widgets.navBar</linkedWidget>
+              <elementId></elementId>
+            </widget>
           </cell>
           <cell>
             <index>0,3</index>
@@ -117,6 +120,7 @@
               <linkedWidget>employeeSystem.widgets.employeeDetails</linkedWidget>
               <elementId></elementId>
               <target>employeeSystem-4</target>
+              <homePage>employeeSystem-home</homePage>
             </widget>
           </cell>
           <cell>
@@ -147,6 +151,7 @@
               <idWithinRootWidget>5</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.addressList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-5</target>
             </widget>
           </cell>
           <cell>
@@ -177,6 +182,7 @@
               <idWithinRootWidget>6</idWithinRootWidget>
               <linkedWidget>employeeSystem.widgets.contactList</linkedWidget>
               <elementId></elementId>
+              <target>employeeSystem-6</target>
             </widget>
           </cell>
           <cell>
